--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -131,3 +131,29 @@
 	width: 20rem;
 	margin-left: calc(50% - 10rem);
 }
+
+.mainquote {
+	height: 10em;
+  width: 100%;
+  position: absolute;
+  top: calc(60% - 10em);
+}
+#quotes {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#quotes > div {
+  position: absolute;
+  top: 10pt;
+  left: 0;
+	width: 100%;
+	background: #222;
+	line-height: 8pt;
+	color: rgba(255, 255, 255, 0.8);
+	text-align: center;
+	opacity: 0;
+}
+#quotes > div > i, h4 {
+	font-weight: 200;
