--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -146,11 +146,9 @@
 
 #quotes > div {
   position: absolute;
-  top: 10pt;
+  top: 10em;
   left: 0;
 	width: 100%;
-	background: #222;
-	line-height: 8pt;
 	color: rgba(255, 255, 255, 0.8);
 	text-align: center;
 	opacity: 0;
