--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -146,7 +146,7 @@
 
 #quotes > div {
   position: absolute;
-  top: 10em;
+  top: 5em;
   left: 0;
 	padding-left: 10%;
   padding-right: 10%;
@@ -155,8 +155,8 @@
 	text-align: center;
 	opacity: 0;
 }
-#quotes > div > i, {
+#quotes > div > i {
 	font-weight: 200;
 	font-family: Roboto;
-	font-size: 5em;
+	font-size: 4.5em;
 }
