--- a/assets/css/homenav.css
+++ b/assets/css/homenav.css
@@ -48,3 +48,103 @@ nav ul li div a {
 nav ul li div a:hover {
   color: #999;
 }
+
+.apolg {
+  position: absolute;
+  height: 16%;
+  top: 1em;
+  left: 2em;
+  z-index: 1;
+}
+
+.aposvg {
+  z-index: 9;
+  position: absolute;
+  height: 40%;
+  left: 13em;
+  top: 1em;
+}
+
+@media only screen and (max-width: 1225px) {
+  nav a {
+    font-family: Montserrat;
+    font-size: 1.7em;
+    color: #ddd;
+    text-decoration: none;
+    border: none;
+    filter: none;
+  }
+}
+@media only screen and (max-width: 900px) {
+    .apolg {
+      position: absolute;
+      height: 13%;
+      top: 2em;
+      left: 2em;
+      z-index: 1;
+    }
+    .aposvg {
+      z-index: 9;
+      position: absolute;
+      height: 40%;
+      left: 11em;
+      top: 1em;
+      width: 20%;
+    }
+    nav a {
+      font-family: Montserrat;
+      font-size: 1.25em;
+      color: #ddd;
+      text-decoration: none;
+      border: none;
+      filter: none;
+    }
+    .nav {
+      position: fixed;
+      top: 1.8em;
+      height: 60pt;
+      z-index: 2;
+      overflow: hidden;
+      width: 68%;
+      right: 1em;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+  .apolg {
+    position: absolute;
+    height: 10%;
+    top: 2em;
+    left: 2em;
+    z-index: 1;
+  }
+  .aposvg {
+    z-index: 9;
+    position: absolute;
+    height: 40%;
+    left: 9em;
+    width: 20%;
+  }
+  nav a {
+    font-family: Montserrat;
+    font-size: 1.25em;
+    color: #ddd;
+    text-decoration: none;
+    border: none;
+    filter: none;
+  }
+  .nav {
+    position: fixed;
+    top: 2.8em;
+    height: 60pt;
+    z-index: 2;
+    overflow: hidden;
+    width: 62%;
+    right: 1em;
+  }
+}
+
+@media (max-width: 700px) {
+	.intro .container {
+		margin-top: 20vh;
+	}
