--- a/assets/css/homenav.css
+++ b/assets/css/homenav.css
@@ -88,16 +88,11 @@ a {
       width: 20%;
     }
     .homenav a {
-      font-family: Montserrat;
       font-size: 1.25em;
-      color: #ddd;
-      text-decoration: none;
-      border: none;
-      filter: none;
     }
     .homenav {
       position: fixed;
-      top: 1.8em;
+      top: 2.5em;
       height: 60pt;
       z-index: 2;
       overflow: hidden;
@@ -108,35 +103,14 @@ a {
 
 @media only screen and (max-width: 700px) {
   .apolg {
-    position: absolute;
     height: 10%;
-    top: 2em;
-    left: 2em;
-    z-index: 1;
   }
   .aposvg {
-    z-index: 9;
-    position: absolute;
-    height: 40%;
     left: 9em;
-    width: 20%;
-  }
-  .homenav a {
-    font-family: Montserrat;
-    font-size: 1.25em;
-    color: #ddd;
-    text-decoration: none;
-    border: none;
-    filter: none;
   }
   .homenav {
-    position: fixed;
     top: 2.8em;
-    height: 60pt;
-    z-index: 2;
-    overflow: hidden;
     width: 62%;
-    right: 1em;
   }
 }
 
@@ -145,27 +119,18 @@ a {
     display: none;
   }
   .aposvg {
-    z-index: 9;
-    position: absolute;
     height: 37%;
     left: 1.3em;
     width: 26%;
   }
-  .homenav a {
-    font-family: Montserrat;
-    font-size: 1.25em;
-    color: #ddd;
-    text-decoration: none;
-    border: none;
-    filter: none;
-  }
   .homenav {
-    position: fixed;
     top: 1.4em;
-    height: 60pt;
-    z-index: 2;
-    overflow: hidden;
     width: 67%;
-    right: 1em;
   }
 	}
+
+  @media (max-width: 450px) {
+    .homenav a {
+      font-size: 0.95em;
+    }
+  	}
