--- a/assets/css/homenav.css
+++ b/assets/css/homenav.css
@@ -46,18 +46,17 @@ a {
 
 .apolg {
   position: absolute;
-  height: 16%;
   top: 1em;
   left: 2em;
   z-index: 1;
+  width: 10em;
 }
 
 .aposvg {
   z-index: 9;
   position: absolute;
-  height: 40%;
   left: 13em;
-  top: 1em;
+  top: 6.5em;
 }
 
 @media only screen and (max-width: 1225px) {
@@ -68,17 +67,16 @@ a {
 @media only screen and (max-width: 1080px) {
     .apolg {
       position: absolute;
-      height: 13%;
       top: 1.8em;
       left: 2em;
       z-index: 1;
+      width: 8em;
     }
     .aposvg {
       z-index: 9;
       position: absolute;
-      height: 40%;
       left: 11em;
-      top: 1em;
+      top: 9em;
       width: 20%;
     }
     .homenav a {
@@ -97,11 +95,11 @@ a {
 
 @media only screen and (max-width: 820px) {
   .apolg {
-    height: 10%;
+    width: 6em;
   }
   .aposvg {
     left: 9em;
-    top: inherit;
+    top: 8em;
   }
   .homenav {
     width: 62%;
@@ -109,12 +107,18 @@ a {
   }
 }
 
+@media (max-width: 700px) {
+  .aposvg {
+    top: 7.5em;
+  }
+  }
+
 @media (max-width: 550px) {
   .apolg {
     display: none;
   }
   .aposvg {
-    height: 37%;
+    top: 6.5em;
     left: 1.3em;
     width: 26%;
   }
@@ -127,6 +131,9 @@ a {
   @media (max-width: 480px) {
     .homenav a {
       font-size: 0.95em;
+    }
+    .aposvg {
+      top: 5.5em;
     }
   	}
     @media (max-width: 400px) {
