--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -28,20 +28,18 @@ html, body { min-height: 100vh; width: 100vw; }
 }
 
 ::-webkit-scrollbar {
-    background: rgba(55, 55, 55, 0);
+    background: #ddd;
     width: 5pt;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #3e3e3e;
-    border-radius: 4pt;
-    width: 5pt;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 5pt;
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
-    background: #3e3e3e;
-    border-radius: 4pt;
-    height: 5pt;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 5pt;
 }
 
 
