--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -160,3 +160,23 @@
 	font-family: Roboto;
 	font-size: 4.5em;
 }
+
+.quick {
+	position: absolute;
+  z-index: 8;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  font-family: Roboto;
+  top: calc(50% + 7rem);
+  font-weight: 300;
+  font-size: 3rem;
+}
+
+.quick .button {
+	border: 2px solid #fff;
+	display: inline-block;
+	padding: 1rem;
+	border-radius: 9px;
+	background: rgba(50, 50, 50, 0.7);
+}
