--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -160,3 +160,37 @@
 	font-family: Roboto;
 	font-size: 4.5em;
 }
+@media (max-width: 650px) {
+	#quotes > div > i {
+		font-size: 3.5em;
+	}
+	.mainquote {
+	  top: calc(40% - 20em);
+	}
+}
+.quick {
+	position: absolute;
+  z-index: 8;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  font-family: Roboto;
+  top: calc(50% + 7rem);
+  font-weight: 300;
+  font-size: 3rem;
+}
+
+.quick .button {
+	border: 2px solid #fff;
+	display: inline-block;
+	padding: 1rem;
+	border-radius: 9px;
+	background: rgba(50, 50, 50, 0.7);
+	-webkit-transition: .15s all ease;
+	-o-transition: .15s all ease;
+	transition: .15s all ease;
+}
+.quick .button:hover {
+	background: rgba(255, 255, 255, 0.8);
+	color: #222;
+}
