--- a/payments/buy.css
+++ b/payments/buy.css
@@ -7,6 +7,11 @@
   position: absolute;
   left: 50%;
   transform: translate(-50%);
+  background: #fafafa;
+  padding: 5em;
+  border: 1px solid #e3e3e3;
+  border-radius: 10px;
+  filter: drop-shadow(0 10px 10px rgba(0, 0, 0, 0.2))
 }
 
 .payment h2 {
@@ -75,4 +80,19 @@ label.error {
   background: #f4f4f4;
   border: 1px solid #e2e2e2;
   padding: 0.1em .5em;
+}
+
+#card-form button {
+  margin: 2.4em 0 0 0;
+  width: 100%;
+  height: 2.4em;
+  background: #f4f4f4;
+  outline: none;
+  border-radius: 5px;
+  border: 1px solid #e2e2e2;
+  transition: all .1s ease-in-out;
+}
+
+#card-form button:hover {
+  background: #fff;
 }
