--- a/payments/method.css
+++ b/payments/method.css
@@ -25,7 +25,7 @@
 
 .paybtn {
   transform: translate(-50%);
-  margin-left: 50%;
+  margin-left: 50% !important;
   width: 25vw !important;
   margin-bottom: 2vh;
 }
